# audition-examples

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
capture-standard-streams/: CMakeLists.txt  README.md  capture.c
catching-crashes/: CMakeLists.txt  README.md  crash.c
catching-signals/: CMakeLists.txt  README.md  signal_test.c
catching-timeouts/: CMakeLists.txt  README.md  timeouts.c
death-tests/: CMakeLists.txt  README.md  death_test.c
file-driven/: CMakeLists.txt  README.md  strtoupper.c  strtoupper_test.c
file-driven/input/: c.txt
file-driven/output/: c.txt
fixtures/: CMakeLists.txt  README.md  fixtures.c
looped/: CMakeLists.txt  README.md  looped.c
minimal/: CMakeLists.txt  README.md  minimal.c
mocking-with-fakes/: CMakeLists.txt  README.md  fakes_test.c
mocking-with-spies/: CMakeLists.txt  README.md  spies_test.c
mocking-with-stubs/: CMakeLists.txt  README.md  stubs.c  stubs_test.c
selective-mocking/: CMakeLists.txt  README.md  _inject.c  _inject.h  selective.c  selective_test.c
simulate-standard-input/: CMakeLists.txt  README.md  input.c
snapshot-testing/: .gitignore  CMakeLists.txt  README.md  strtoupper.c  strtoupper_test.c
static-functions/: CMakeLists.txt  README.md  static.c  static_test.c
table-driven/: CMakeLists.txt  README.md  table-driven.c
